about done, scrollbar shifting fix

--- a/src/app/components/cart/cart.component.scss
+++ b/src/app/components/cart/cart.component.scss
@@ -1,7 +1,7 @@
 .cart {
     position: fixed;
     top: 0;
-    left: 0;
+    left: -17px;
     width: 100vw;
     height: 100vh;
     background-color: rgba(42, 157, 143, 0.8);
