--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -1,6 +1,7 @@
 .header {
-    padding: 10px 0;
     margin-bottom: 30px;
+    height: 50px;
+    padding: 10px 0;
 }
 
 .header__inner {
