--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,6 +5,10 @@
     box-sizing: border-box;
 }
 
+html {
+  scrollbar-gutter: stable;
+}
+
 .container {
     width: 1140px;
     margin: 0 auto;
